# cookiecutter-relecloud

hooks/: post_gen_project.py
{{cookiecutter.__src_folder_name}}/src/db/: beanie_models.py  beanie_seeder.py
{{cookiecutter.__src_folder_name}}/src/fastapi/: pyproject.toml
{{cookiecutter.__src_folder_name}}/src/fastapi/fastapi_app/: app.py
