[project]
name = "fastapi_app"
version = "1.0.0"
description = "{{cookiecutter.__project_short_description}}"
dependencies = [
    "fastapi==0.100.1",
    "jinja2==3.1.2",
    "python-multipart==0.0.6",
    {% if "postgres" in cookiecutter.db_resource %}
    "sqlmodel==0.0.8",
    {% endif %}
    {% if "mongodb" in cookiecutter.db_resource %}
    "beanie==1.21.0",
    "motor==3.3.1",
    "pydantic==2.3.0",
    {% endif %}
    "uvicorn[standard]==0.23.2",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"
